--- a/src/app/pages/mensajes/mensajes.page.html
+++ b/src/app/pages/mensajes/mensajes.page.html
@@ -1,17 +1,22 @@
 <ion-header>
   <ion-toolbar color="medium">
-    <ion-title text-center>UTPL</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
+    <ion-title text-center>
+      UTPL Notificaciones
+    </ion-title>
   </ion-toolbar>
 </ion-header>
 <ion-content padding>
-  <ion-searchbar animated placeholder="Buscar"></ion-searchbar>
+  <!-- <ion-searchbar animated placeholder="Buscar"></ion-searchbar> -->
   <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
     <ion-refresher-content pullingIcon="arrow-dropdown" pullingText="Tire para cargar" refreshingSpinner="circles"
       refreshingText="Cargando...">
     </ion-refresher-content>
   </ion-refresher>
-  <ion-item-sliding *ngFor="let mensaje of mensajes">
-    <ion-item>
+  <ion-list>
+    <ion-item *ngFor="let mensaje of mensajes">
       <ion-avatar slot="start">
         <img src="https://digital-switch.com/pruebas/clinicaldana/wp-content/uploads/2018/07/user.png">
       </ion-avatar>
@@ -27,8 +32,5 @@
         </ion-text>
       </ion-label>
     </ion-item>
-    <ion-item-options side="end">
-      <ion-item-option (click)="unread(item)" color="danger">Eliminar</ion-item-option>
-    </ion-item-options>
-  </ion-item-sliding>
+  </ion-list>
 </ion-content>
