--- a/src/app/pages/perfil/perfil.page.html
+++ b/src/app/pages/perfil/perfil.page.html
@@ -1,6 +1,11 @@
 <ion-header>
   <ion-toolbar color="medium">
-    <ion-title text-center>UTPL</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
+    <ion-title text-center>
+      UTPL Notificaciones
+    </ion-title>
   </ion-toolbar>
 </ion-header>
 
