--- a/src/app/pages/notificaciones/notificaciones.page.html
+++ b/src/app/pages/notificaciones/notificaciones.page.html
@@ -18,7 +18,7 @@
     </ion-refresher-content>
   </ion-refresher>
   <ion-list>
-    <ion-item *ngFor="let notificacion of notificaciones">
+    <ion-item *ngFor="let notificacion of notificaciones | async">
       <ion-avatar slot="start">
         <img src="https://digital-switch.com/pruebas/clinicaldana/wp-content/uploads/2018/07/user.png">
       </ion-avatar>
