--- a/src/app/pages/personal/personal.page.html
+++ b/src/app/pages/personal/personal.page.html
@@ -4,25 +4,19 @@
       <ion-back-button></ion-back-button>
     </ion-buttons>
     <ion-buttons slot="end">
-      <ion-button 
-      shape="block" 
-      fill="outline" 
-      color="medium" 
-      (click)=" presentModal()">Responder</ion-button>
+      <ion-button shape="block" fill="outline" color="medium" (click)=" presentModal()">Responder</ion-button>
     </ion-buttons>
     <ion-title>UTPL</ion-title>
   </ion-toolbar>
-
 </ion-header>
 
-<ion-content padding *ngIf="notificacion">
-  <ion-list>
+ <ion-content padding *ngIf="notificacion">
+<ion-list>
     <ion-item-divider>
       <ion-label>
-        {{notificacion.componente}}
+        Mensaje
       </ion-label>
     </ion-item-divider>
-
     <ion-item>
       <ion-avatar slot="start">
         <img src="https://digital-switch.com/pruebas/clinicaldana/wp-content/uploads/2018/07/user.png">
@@ -35,9 +29,7 @@
       </ion-label>
     </ion-item>
   </ion-list>
-
   <ion-text>
     <p text-justify>{{notificacion.mensaje}}</p>
   </ion-text>
-
 </ion-content>
